no more streetview

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       var center = new google.maps.LatLng(42.0, -70.5);
       var mapOptions = {
         center: center,
-        zoom: 8
+        zoom: 8,
+        streetViewControl:false
       };
       map = new google.maps.Map(document.getElementById('map-canvas'),
           mapOptions);
