--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
   </script>
 
   <script id="all-birds-list-template" type="text/x-handlebars-template">
-  <div class='input-group' class="{{name.id}}-container">
+  <div class="input-group {{name.id}}-container">
     <span class='input-group-addon filter-list-check'>
       <input id='{{name.id}}' data-name='{{name.string}}' type='checkbox'>
     </span>
@@ -487,7 +487,7 @@
   </script>
 
   <script id='filter-list-template' type="text/x-handlebars-template">
-    <div class='input-group' class="{{name.id}}-container">
+    <div class='input-group {{name.id}}-container'>
       <span class='input-group-addon filter-list-check'>
         <input id='{{name.id}}' data-name='{{name.string}}' type='checkbox'>
       </span>
