Adds colors to filter

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <link type="text/css" href="css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/bootstrap-timepicker.min.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
-  <style type="text/css">
+  <link rel="stylesheet" type="text/css" href="css/colors.css">
+  <style type="text/css"><
   /** FIX for Bootstrap and Google Maps Info window styles problem **/
   img[src*="gstatic.com/"], img[src*="googleapis.com/"] {
     max-width: none;
