Makes colors more transparent

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
   </script>
 
   <script id="all-birds-list-template" type="text/x-handlebars-template">
-  <div class="input-group {{name.id}}-container">
+  <div class="input-group {{name.id}}-container filter-container">
     <span class='input-group-addon filter-list-check'>
       <input id='{{name.id}}' data-name='{{name.string}}' type='checkbox'>
     </span>
@@ -488,7 +488,7 @@
   </script>
 
   <script id='filter-list-template' type="text/x-handlebars-template">
-    <div class='input-group {{name.id}}-container'>
+    <div class='input-group {{name.id}}-container filter-container'>
       <span class='input-group-addon filter-list-check'>
         <input id='{{name.id}}' data-name='{{name.string}}' type='checkbox'>
       </span>
