minor time filtering fix

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               clearMarkers();
               currentBirdSightings=Filter.or(currentBirdSightings,
                                              Filter.byDate(birdSightings,startDate,endDate));
-          Display.createAndDisplayBirdSightings(currentBirdSightings);
+          Display.displayBirdSightings(currentBirdSightings);
       });
 
       //BIRD FILTER
