--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
       <div class="row" id="filter-list-row">
           <div class="col-md-9" id="map">
             <!--map-->
-            <!--<div id="map-canvas"></div>-->
+            <div id="map-canvas"></div>
           </div>
           <div class="col-md-3" id="filter-list">
               <div id="autocomplete-answers"></div>
