--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   var currentFilters=[]; //list of current filters, as objects containing all necessary parameters
   var birdsOnMap=[];
   var username = "";
+  var autocompleteNumber = 0;
   var newSighting = {
     commonName: "Northern Cardinal",
     speciesName: "Cardinalis cardinalis",
@@ -81,7 +82,7 @@
 
     var combinedList = [];
     var tags = [];
-    var userList = ["zee01","aaron97","fishy","marble","bebop","bay67","boxius_beer45","cardinalis_fan","cool_bird00","cool_bird01","diamond","encephalitis_bastard","eien","finnix","garr","garrrr","haymarket88","house_sparrow_freak","instagramboy","jay_fan","jungle_girl","lazy_dog","mama77","mary","northern_explorer","northern_jay_fan37","oklahoma_lover","passer_ross","rabbit55","southern_grandma","taylor","tilly_taylor","uber_sucks","vietnam_war","wisconsin_rocks","woohoo49","x-ray76","yyyjay","zebra","atlantis78","richard","peter","christoph","daisy","dangitdang","elsevier","fax_machine","not_happy","betty69"];
+    var userList = ["zee01","aaron97","fishy","marble","bebop","bay67","boxius_beer45","cardinalis_fan","cool_bird00","cool_bird01","diamond","encephalitis_bastard","eien","finnix","garr","garrrr","haymarket88","house_sparrow_freak","instagramboy","jay_fan","jungle_girl","lazy_dog","mama77","mary taylor","mama taylor","northern_explorer","northern_jay_fan37","oklahoma_lover","passer_ross","rabbit55","southern_grandma","taylor","tilly_taylor","uber_sucks","vietnam_war","wisconsin_rocks","woohoo49","x-ray76","yyyjay","zebra","atlantic zebra","atlantic eien","atlantis78","richard","peter","chris peter","christoph","daisy","dangitdang","elsevier","fax_machine","not_happy","betty69"];
 
     $( "#input_bar" ).keyup(function(){
         //$(this).val();
@@ -91,6 +92,7 @@
             $( "#autocomplete-answers" ).show();
         }
         $( ".autocomplete-removable" ).remove();
+        autocompleteNumber = 0;
         combinedList = userList.concat(birdsOnMap);
         tags = combinedList.sort(function (a, b) {
             return a.toLowerCase().localeCompare(b.toLowerCase());
@@ -105,6 +107,7 @@
     $( "#input_bar" ).focusout(function() {
        if (!($("#autocomplete-answers").is(":hover"))) {
            $( "#autocomplete-answers" ).hide();
+           autocompleteNumber = 0;
            $( ".autocomplete-removable" ).remove();
            document.getElementById('input_bar').value='';
         }
@@ -130,11 +133,14 @@
 
     $( "#input_bar" ).autocomplete({
 	source: function( request, response ) {
-    var matcher = new RegExp( "^" + $.ui.autocomplete.escapeRegex( request.term ), "i" );
+    var matcher = new RegExp( "\\b" + $.ui.autocomplete.escapeRegex( request.term ), "i" );
 	    response( $.grep( combinedList, function( item ){
         var matches = matcher.test( item );
-        if (matches) {
-          fillAutoComplete(item);
+        if (matches && autocompleteNumber == 0) {
+          fillAutoCompleteWithFocus(item);
+          autocompleteNumber = 1;
+        } else if (matches) {
+          fillAutoComplete(item);    
         }
 		  return false;
 	    })
@@ -274,10 +280,20 @@
             $('.filter-list-check input').on('change',filterBirdListener);
       }
 
+      function fillAutoCompleteWithFocus(item){
+          $('#autocomplete-answers').append(autocompListTemplateWithFocus(item));
+          $('#autocomplete-focus').focus();
+            $('.filter-list-check input').on('change',filterBirdListener);
+      }
+
       //hi everyone...SORRY THIS CODE IS SO UGLY...
       //has the class 'autocomplete-removable' on first div
       function autocompListTemplate(name){
           return "<div class='input-group autocomplete-removable'><span class='input-group-addon filter-list-check'><input id='"+nameToID(name)+"' data-name='"+name+"' type='checkbox'></span><span class='input-group-addon filter-list-species'>"+name+"</span><span class='input-group-addon filter-list-o'><span class='glyphicon glyphicon-remove'></span></span></div>";
+      }
+
+      function autocompListTemplateWithFocus(name){
+          return "<div class='input-group autocomplete-removable' id='autocomplete-focus'><span class='input-group-addon filter-list-check'><input id='"+nameToID(name)+"' data-name='"+name+"' type='checkbox'></span><span class='input-group-addon filter-list-species'>"+name+"</span><span class='input-group-addon filter-list-o'><span class='glyphicon glyphicon-remove'></span></span></div>";
       }
 
       //returns a version of the name with '-' intsead of ' '.
@@ -321,6 +337,7 @@
         }
         // Create the filter checkboxes
         $('#entire-list').append(Display.allBirdsListTemplate(context));
+        //sort the commonNames before TODO
         birdsOnMap.push(birdSpecies[i].commonName);
       }
       // Attach listeners to checkboxes
