--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Adds deprecated functions so we can use overlay -->
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
   <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChibrTeOY3gx8Kg4xQgpj1PnCWFmw10W8&sensor=false">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChibrTeOY3gx8Kg4xQgpj1PnCWFmw10W8&sensor=false&libraries=places">
     </script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.10.0.custom.min.js"></script>
@@ -67,8 +67,18 @@
         zoom: 9,
         streetViewControl:false
       };
-      map = new google.maps.Map(document.getElementById('map-canvas'),
+      var map = new google.maps.Map(document.getElementById('map-canvas'),
           mapOptions);
+
+      var input = /** @type {HTMLInputElement} */(document.getElementById('sighting-location'));
+
+      //var types = document.getElementById('type-selector');
+      //map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+      //map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
+
+      var autocomplete = new google.maps.places.Autocomplete(input);
+      autocomplete.bindTo('bounds', map);
+
     }
     google.maps.event.addDomListener(window, 'load', initialize);
 
@@ -120,6 +130,8 @@
            //document.getElementById('input_bar').value='';
         }
     });
+
+//https://maps.googleapis.com/maps/api/place/autocomplete/json?input=Vict&types=geocode&sensor=false&key=AIzaSyD_Zbfis4bwIE_CnAv5IwimKkEF5pkuTZE
 
     // This causes a bug
 
