--- a/index.html
+++ b/index.html
@@ -157,17 +157,26 @@
     var tags = [];
     var userList = ["zee01","aaron97","fishy","marble","bebop","bay67","boxius_beer45","cardinalis_fan","cool_bird00","cool_bird01","diamond","encephalitis_bastard","eien","finnix","garr","garrrr","haymarket88","house_sparrow_freak","instagramboy","jay_fan","jungle_girl","lazy_dog","mama77","mary taylor","mama taylor","northern_explorer","northern_jay_fan37","oklahoma_lover","passer_ross","rabbit55","southern_grandma","taylor","tilly_taylor","uber_sucks","vietnam_war","wisconsin_rocks","woohoo49","x-ray76","yyyjay","zebra","atlantic zebra","atlantic eien","atlantis78","richard","peter","chris peter","christoph","daisy","dangitdang","elsevier","fax_machine","not_happy","betty69"];
 
-    $( "#input_bar" ).keyup(function(){
+    $( "#input_bar" ).keyup(function(event){
         //$(this).val();
         if (document.getElementById('input_bar').value=='') {
             //$( "#autocomplete-answers" ).hide();
         } else {
             $( "#autocomplete-answers" ).show();
         }
-        $( ".autocomplete-removable" ).remove();
-        autocompleteNumber = 0;
-        mapService.getPlacePredictions({ input: document.getElementById('input_bar').value }, mapCallback);
-        //alert('length ' + predictedPlaces[0]);
+        //alert('event.key ' + event.keyCode + ' ' + keyCode.UP + ' ' + keyCode.DOWN);
+        if ( event.keyCode == 13 ) { //ENTER KEY
+         
+        } else if ( event.keyCode == 38 ) { //UP ARROW
+
+        } else if ( event.keyCode == 40 ) { //DOWN ARROW  
+      
+        } else if (event.keyCode > 47 && event.keyCode < 91) {
+            $( ".autocomplete-removable" ).remove();
+            autocompleteNumber = 0;
+            mapService.getPlacePredictions({ input: document.getElementById('input_bar').value }, mapCallback);
+            //alert('length ' + predictedPlaces[0]);
+        }
 
     });
 
@@ -178,18 +187,21 @@
        }
 
        //var results = document.getElementById('results');
-       predictedPlaces = [];
+       var prePredictedPlaces = [];
 
        for (var i = 0, prediction; prediction = predictions[i]; i++) {
-           predictedPlaces[i] = prediction.description;
+           prePredictedPlaces[i] = prediction.description;
        }
       // alert('length ' + predictedPlaces[1]);
 
        var preCombinedList = userList.concat(birdsOnMap);
-       combinedList = preCombinedList.concat(predictedPlaces);
-       tags = combinedList.sort(function (a, b) {
+       combinedList = preCombinedList.sort(function (a, b) {
             return a.toLowerCase().localeCompare(b.toLowerCase());
         });
+       predictedPlaces = prePredictedPlaces.sort(function (a, b) {
+            return a.toLowerCase().localeCompare(b.toLowerCase());
+       });
+       tags = combinedList.concat(predictedPlaces);
     }
 
 
@@ -230,7 +242,7 @@
     $( "#input_bar" ).autocomplete({
 	source: function( request, response ) {
     var matcher = new RegExp( "\\b" + $.ui.autocomplete.escapeRegex( request.term ), "i" );
-	    response( $.grep( combinedList, function( item ){
+	    response( $.grep( tags, function( item ){
         var matches = matcher.test( item );
         if (matches && autocompleteNumber == 0) {
           fillAutoCompleteWithFocus(item);
