Changes bird logo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="css/bootstrap-timepicker.min.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <link rel="stylesheet" type="text/css" href="css/colors.css">
+  <link href='http://fonts.googleapis.com/css?family=Comfortaa:400,700' rel='stylesheet' type='text/css'>
   <style type="text/css"><
   /** FIX for Bootstrap and Google Maps Info window styles problem **/
   img[src*="gstatic.com/"], img[src*="googleapis.com/"] {
@@ -690,7 +691,7 @@
     <div class="row" id="filter-options">
           <div class="col-md-5">
             <big><big><big>
-              <a href="index.html"><span class="big">bird<span class="glyphicon glyphicon-eye-open"></span>cular</span>
+              <a href="index.html"><span class="big birdocular-logo">bird<img src="images/icon_9766.png" width='20'>cular</span>
               </a>
                 &nbsp;
               <span id="username">Welcome.</span>&nbsp;
